# zipsa_tst_func

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake
cpp/inc/: BuildPlatform.h  ClientSocket.h  CmdExecutor.h  Node.h  Queue.h  ServerSocket.h  Socket.h  SocketException.h  msg_data.h  utils.h
cpp/pico/: CMakeLists.txt  tofRetrieveData.cpp
cpp/teleworks/: CMakeLists.txt  ClientSocket.cpp  CmdExecutor.cpp  Makefile  Node.cpp  Queue.cpp  ServerSocket.cpp  Socket.cpp  cmake_install.cmake  mockup_client_main.cpp  mockup_server_main.cpp  simple_filexfer_client.cpp  simple_filexfer_server.cpp  utils.cpp
cpp/tofCAPI/: CMakeLists.txt  Makefile  cmake_install.cmake  tofCAPI.c
include/royale/: Definitions.hpp  FilterLevel.hpp  ICameraDevice.hpp  IEvent.hpp  ModuleConfigData.hpp  ProcessingFlag.hpp
include/royaleCAPI/: CAPIVersion.h  CAPIVersion32400.h  CameraDeviceCAPI.h  FilterLevelCAPI.h  ProcessingParametersCAPI.h
share/: FindNumpy.cmake  royale-config.cmake
